# loglens

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: PROJECT_PLAN.md
notebooks/: 01_data_exploration.ipynb
src/loglens/: __init__.py  data.py
tests/: test_data.py
