[project]
name = "loglens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Prit Kalariya", email = "kalariyaprit2000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
loglens = "loglens:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
