[project]
name = "loglens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Prit Kalariya", email = "kalariyaprit2000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
loglens = "loglens:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (likely-bug patterns)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize old syntax)
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
